--- a/sangoexplorer/index.html
+++ b/sangoexplorer/index.html
@@ -217,8 +217,8 @@
         data-sizes="auto"
         alt="/sangoexplorer/3.png"
         title="sangoexplorer" /></p>
-<p>链接：https://pan.baidu.com/s/1Z8cGykCiBmdWDu_ClK__3Q</p>
-<p>提取码：vagx</p>
+<p>链接：https://pan.baidu.com/s/1d5ahilYC8q3TbcgEMj-IQw</p>
+<p>提取码：c56o</p>
 <p>复制这段内容后打开百度网盘手机App，操作更方便哦&ndash;来自百度网盘超级会员V8的分享</p>
 <p>Welcome to <a href="https://bihai.org">https://bihai.org</a>!</p>
 </div><div id="comments"><div id="utterances"></div><noscript>
